otawa/linux-x86_64/otawa-core-build/gliss2/irg/parser.output
   0  $accept : %entry% $end

   1  top : specs EOF

   2  LocatedID : ID

   3  specs : MachineSpec
   4        | specs MachineSpec

   5  MachineSpec : LetDef
   6              | TypeSpec
   7              | MemorySpec
   8              | RegisterSpec
   9              | VarSpec
  10              | ModeSpec
  11              | OpSpec
  12              | ResourceSpec
  13              | ExceptionSpec
  14              | ExtendSpec
  15              | CanonSpec

  16  LetDef : LET LocatedID EQ LetExpr
  17         | LET LocatedID COLON Type EQ LetExpr

  18  ResourceSpec : RESOURCE ResourceList

  19  ResourceList : Resource
  20               | ResourceList COMMA Resource

  21  Resource : LocatedID
  22           | LocatedID LBRACK CARD_CONST RBRACK

  23  CanonSpec : CANON STRING_CONST LPAREN CanonParamList RPAREN
  24            | CANON Type STRING_CONST LPAREN CanonParamList RPAREN
  25            | CANON STRING_CONST LPAREN RPAREN
  26            | CANON Type STRING_CONST LPAREN RPAREN
  27            | CANON Type STRING_CONST

  28  CanonParamList : CanonParam
  29                 | CanonParamList COMMA CanonParam

  30  CanonParam : Type
  31             | LocatedID COLON Type

  32  ExceptionSpec : EXCEPTION IdentifierList

  33  IdentifierList : LocatedID
  34                 | IdentifierList COMMA LocatedID

  35  TypeSpec : TYPE LocatedID EQ TypeExpr

  36  TypeExpr : BOOL
  37           | INT LPAREN LetExpr RPAREN
  38           | CARD LPAREN LetExpr RPAREN
  39           | FIX LPAREN LetExpr COMMA LetExpr RPAREN
  40           | FLOAT LPAREN LetExpr COMMA LetExpr RPAREN
  41           | LBRACK LetExpr DOUBLE_DOT LetExpr RBRACK
  42           | ENUM LPAREN ValueList RPAREN

  43  ValueList : Value
  44            | ValueList COMMA Value

  45  Value : LetExpr
  46        | LetExpr DOUBLE_DOT LetExpr

  47  LetExpr : Expr

  48  MemorySpec : MEM LocatedID LBRACK MemPart RBRACK OptionalMemAttrDefList

  49  RegisterSpec : REG LocatedID LBRACK RegPart RBRACK OptionalMemAttrDefList

  50  VarSpec : VAR LocatedID LBRACK RegPart RBRACK OptionalMemAttrDefList

  51  MemPart : LetExpr COMMA Type
  52          | LetExpr

  53  RegPart : LetExpr COMMA Type
  54          | Type

  55  Type : TypeExpr
  56       | ID

  57  OptionalMemAttrDefList :
  58                         | MemAttrDefList

  59  MemAttrDefList : MemAttrDef
  60                 | MemAttrDefList MemAttrDef

  61  MemAttrDef : VOLATILE EQ LetExpr
  62             | INITIALA EQ LetExpr
  63             | PORTS EQ CARD_CONST COMMA CARD_CONST
  64             | USES EQ UsesDef
  65             | ALIAS EQ MemLocation
  66             | ID EQ Expr
  67             | ID EQ LBRACE Sequence RBRACE

  68  MemLocation : MemLocBase
  69              | MemLocBase BIT_LEFT Bit_Expr DOUBLE_DOT Bit_Expr GT

  70  MemLocBase : ID
  71             | ID LBRACK Expr RBRACK

  72  ModeSpec : MODE LocatedID LPAREN ParamList RPAREN OptionalModeExpr AttrDefList
  73           | MODE LocatedID EQ Identifier_Or_List

  74  OptionalModeExpr :
  75                   | EQ Expr

  76  OpSpec : OP LocatedID LPAREN ParamList RPAREN AttrDefList
  77         | OP LocatedID EQ Identifier_Or_List
  78         | OP LocatedID error

  79  ExtendSpec : ExtendHeader AttrDefList

  80  ExtendHeader : EXTEND ExtendIDList

  81  ExtendIDList : ID
  82               | ExtendIDList COMMA ID

  83  Identifier_Or_List : ID
  84                     | Identifier_Or_List PIPE ID

  85  ParamList :
  86            | ParamListPart
  87            | ParamList COMMA ParamListPart

  88  ParamListPart : ID COLON ParaType

  89  ParaType : TypeExpr
  90           | ID

  91  AttrDefList :
  92              | NOAttrDefList

  93  NOAttrDefList : AttrDef
  94                | NOAttrDefList AttrDef

  95  AttrDef : ID EQ Expr
  96          | ID EQ LBRACE Sequence RBRACE
  97          | SYNTAX EQ AttrExpr
  98          | IMAGE EQ AttrExpr
  99          | ACTION EQ LBRACE Sequence RBRACE
 100          | USES EQ UsesDef
 101          | ID EQ error
 102          | ID error

 103  AttrExpr : Expr

 104  Sequence :
 105           | StatementList SEMI

 106  StatementList : Statement
 107                | StatementList SEMI Statement

 108  Statement :
 109            | ACTION
 110            | ID
 111            | ID LPAREN
 112            | ID DOT ACTION
 113            | ID DOT ID
 114            | Location EQ Expr
 115            | ConditionalStatement
 116            | STRING_CONST LPAREN ArgList RPAREN
 117            | ERROR LPAREN STRING_CONST RPAREN
 118            | LET ID EQ Expr
 119            | LET ID COLON Type EQ Expr
 120            | ForHeader DO Sequence ENDDO

 121  ForHeader : FOR ID IN Expr DOUBLE_DOT Expr
 122            | FOR ID COLON Type IN Expr DOUBLE_DOT Expr

 123  ArgList :
 124          | Expr
 125          | ArgList COMMA Expr

 126  Opt_Bit_Optr :
 127               | BIT_LEFT Bit_Expr DOUBLE_DOT Bit_Expr GT

 128  Location : ID
 129           | ID BIT_LEFT Bit_Expr DOUBLE_DOT Bit_Expr GT
 130           | ID LBRACK Expr RBRACK
 131           | ID LBRACK Expr RBRACK BIT_LEFT Bit_Expr DOUBLE_DOT Bit_Expr GT
 132           | Location DOUBLE_COLON Location
 133           | LPAREN Location RPAREN

 134  ConditionalStatement : IF Expr THEN Sequence OptionalElse ENDIF
 135                       | IF Expr THEN Sequence OptionalElse RBRACE
 136                       | SWITCH LPAREN Expr RPAREN LBRACE CaseBody RBRACE

 137  OptionalElse :
 138               | ELSE Sequence

 139  CaseBody : CaseList
 140           | OptCaseList Default OptCaseList

 141  OptCaseList :
 142              | CaseList

 143  CaseList : CaseStat
 144           | CaseList CaseStat

 145  CaseStat : CASE Expr COLON Sequence

 146  Default : DEFAULT COLON Sequence

 147  Expr : COERCE LPAREN Type COMMA Expr RPAREN
 148       | COERCE error
 149       | FORMAT LPAREN STRING_CONST COMMA ArgList RPAREN
 150       | FORMAT error
 151       | STRING_CONST LPAREN ArgList RPAREN
 152       | ID DOT SYNTAX
 153       | ID DOT IMAGE
 154       | ID DOT ID
 155       | Expr DOUBLE_COLON Expr
 156       | ID
 157       | ID LPAREN
 158       | ID LBRACK Expr RBRACK
 159       | ID LBRACK error
 160       | Expr BIT_LEFT Bit_Expr DOUBLE_DOT Bit_Expr GT
 161       | Expr PLUS Expr
 162       | Expr MINUS Expr
 163       | Expr STAR Expr
 164       | Expr SLASH Expr
 165       | Expr PERCENT Expr
 166       | Expr DOUBLE_STAR Expr
 167       | Expr LEFT_SHIFT Expr
 168       | Expr RIGHT_SHIFT Expr
 169       | Expr ROTATE_LEFT Expr
 170       | Expr ROTATE_RIGHT Expr
 171       | Expr LT Expr
 172       | Expr GT Expr
 173       | Expr LEQ Expr
 174       | Expr GEQ Expr
 175       | Expr EQU Expr
 176       | Expr NEQ Expr
 177       | Expr AMPERS Expr
 178       | Expr CIRC Expr
 179       | Expr PIPE Expr
 180       | EXCLAM Expr
 181       | TILD Expr
 182       | PLUS Expr
 183       | MINUS Expr
 184       | Expr AND Expr
 185       | Expr OR Expr
 186       | LPAREN Expr RPAREN
 187       | LPAREN error
 188       | LPAREN Expr error
 189       | IF Expr THEN Expr ELSE Expr ENDIF
 190       | IF error
 191       | SWITCH LPAREN Expr RPAREN LBRACE CaseExprBody RBRACE
 192       | SWITCH error
 193       | Constant

 194  Constant : FIXED_CONST
 195           | CARD_CONST
 196           | CARD_CONST_64
 197           | BIN_CONST
 198           | BIN_CONST_64
 199           | STRING_CONST

 200  Bit_Expr : ID
 201           | MINUS Bit_Expr
 202           | PLUS Bit_Expr
 203           | TILD Bit_Expr
 204           | Bit_Expr PLUS Bit_Expr
 205           | Bit_Expr MINUS Bit_Expr
 206           | Bit_Expr STAR Bit_Expr
 207           | Bit_Expr SLASH Bit_Expr
 208           | Bit_Expr PERCENT Bit_Expr
 209           | Bit_Expr DOUBLE_STAR Bit_Expr
 210           | Bit_Expr AMPERS Bit_Expr
 211           | Bit_Expr PIPE Bit_Expr
 212           | Bit_Expr CIRC Bit_Expr
 213           | LPAREN Bit_Expr RPAREN
 214           | FIXED_CONST
 215           | CARD_CONST
 216           | STRING_CONST

 217  CaseExprBody : CaseExprList
 218               | OptCaseExprList ExprDefault OptCaseExprList

 219  OptCaseExprList :
 220                  | CaseExprList

 221  CaseExprList : CaseExprStat
 222               | CaseExprList CaseExprStat

 223  CaseExprStat : CASE Expr COLON Expr

 224  ExprDefault : DEFAULT COLON Expr

 225  UsesDef : UsesOrSequence
 226          | UsesDef COMMA UsesOrSequence

 227  UsesOrSequence : UsesIfAtom
 228                 | UsesOrSequence PIPE UsesIfAtom

 229  UsesIfAtom : UsesIndirectAtom
 230             | IF Expr THEN UsesIfAtom OptionalElseAtom ENDIF

 231  OptionalElseAtom :
 232                   | ELSE UsesIfAtom

 233  UsesIndirectAtom : UsesCondAtom
 234                   | ID DOT USES
 235                   | LPAREN UsesDef RPAREN
 236                   | UsesLocationList AND ID DOT USES
 237                   | UsesLocationList AND LPAREN UsesDef RPAREN

 238  UsesCondAtom : UsesAndAtom
 239               | LBRACE Expr RBRACE UsesAndAtom

 240  UsesAndAtom : UsesLocationList UsesActionList

 241  UsesActionList :
 242                 | ActionTimeList OptionalAction
 243                 | TimeActionList OptionalTime

 244  ActionTimeList : SHARP LBRACE Expr RBRACE
 245                 | ActionTimeList COLON UsesActionAttr SHARP LBRACE Expr RBRACE

 246  TimeActionList : COLON UsesActionAttr
 247                 | TimeActionList SHARP LBRACE Expr RBRACE COLON UsesActionAttr

 248  OptionalAction :
 249                 | COLON UsesActionAttr

 250  OptionalTime :
 251               | SHARP LBRACE Expr RBRACE

 252  UsesActionAttr : ID
 253                 | ACTION

 254  UsesLocationList : UsesLocation
 255                   | UsesLocationList AMPERS UsesLocation

 256  UsesLocation : ID Opt_Bit_Optr
 257               | ID LBRACK Expr RBRACK Opt_SecDim Opt_Bit_Optr

 258  Opt_SecDim :
 259             | LBRACK RBRACK

 260  %entry% : '\001' top

state 0
	$accept : . %entry% $end  (0)

	'\001'  shift 1
	.  error

	%entry%  goto 2


state 1
	%entry% : '\001' . top  (260)

	CANON  shift 3
	EXTEND  shift 4
	LET  shift 5
	MEM  shift 6
	MODE  shift 7
	OP  shift 8
	REG  shift 9
	TYPE  shift 10
	VAR  shift 11
	RESOURCE  shift 12
	EXCEPTION  shift 13
	.  error

	top  goto 14
	specs  goto 15
	MachineSpec  goto 16
	LetDef  goto 17
	TypeSpec  goto 18
	MemorySpec  goto 19
	RegisterSpec  goto 20
	VarSpec  goto 21
	ModeSpec  goto 22
	OpSpec  goto 23
	ResourceSpec  goto 24
	ExceptionSpec  goto 25
	ExtendSpec  goto 26
	CanonSpec  goto 27
	ExtendHeader  goto 28


state 2
	$accept : %entry% . $end  (0)

	$end  accept


state 3
	CanonSpec : CANON . STRING_CONST LPAREN CanonParamList RPAREN  (23)
	CanonSpec : CANON . Type STRING_CONST LPAREN CanonParamList RPAREN  (24)
	CanonSpec : CANON . STRING_CONST LPAREN RPAREN  (25)
	CanonSpec : CANON . Type STRING_CONST LPAREN RPAREN  (26)
	CanonSpec : CANON . Type STRING_CONST  (27)

	ID  shift 29
	STRING_CONST  shift 30
	BOOL  shift 31
	CARD  shift 32
	ENUM  shift 33
	FIX  shift 34
	FLOAT  shift 35
	INT  shift 36
	LBRACK  shift 37
	.  error

	Type  goto 38
	TypeExpr  goto 39


state 4
	ExtendHeader : EXTEND . ExtendIDList  (80)

	ID  shift 40
	.  error

	ExtendIDList  goto 41


state 5
	LetDef : LET . LocatedID EQ LetExpr  (16)
	LetDef : LET . LocatedID COLON Type EQ LetExpr  (17)

	ID  shift 42
	.  error

	LocatedID  goto 43


state 6
	MemorySpec : MEM . LocatedID LBRACK MemPart RBRACK OptionalMemAttrDefList  (48)

	ID  shift 42
	.  error

	LocatedID  goto 44


state 7
	ModeSpec : MODE . LocatedID LPAREN ParamList RPAREN OptionalModeExpr AttrDefList  (72)
	ModeSpec : MODE . LocatedID EQ Identifier_Or_List  (73)

	ID  shift 42
	.  error

	LocatedID  goto 45


state 8
	OpSpec : OP . LocatedID LPAREN ParamList RPAREN AttrDefList  (76)
	OpSpec : OP . LocatedID EQ Identifier_Or_List  (77)
	OpSpec : OP . LocatedID error  (78)

	ID  shift 42
	.  error

	LocatedID  goto 46


state 9
	RegisterSpec : REG . LocatedID LBRACK RegPart RBRACK OptionalMemAttrDefList  (49)

	ID  shift 42
	.  error

	LocatedID  goto 47


state 10
	TypeSpec : TYPE . LocatedID EQ TypeExpr  (35)

	ID  shift 42
	.  error

	LocatedID  goto 48


state 11
	VarSpec : VAR . LocatedID LBRACK RegPart RBRACK OptionalMemAttrDefList  (50)

	ID  shift 42
	.  error

	LocatedID  goto 49


state 12
	ResourceSpec : RESOURCE . ResourceList  (18)

	ID  shift 42
	.  error

	LocatedID  goto 50
	ResourceList  goto 51
	Resource  goto 52


state 13
	ExceptionSpec : EXCEPTION . IdentifierList  (32)

	ID  shift 42
	.  error

	LocatedID  goto 53
	IdentifierList  goto 54


state 14
	%entry% : '\001' top .  (260)

	.  reduce 260


state 15
	top : specs . EOF  (1)
	specs : specs . MachineSpec  (4)

	CANON  shift 3
	EXTEND  shift 4
	LET  shift 5
	MEM  shift 6
	MODE  shift 7
	OP  shift 8
	REG  shift 9
	TYPE  shift 10
	VAR  shift 11
	RESOURCE  shift 12
	EXCEPTION  shift 13
	EOF  shift 55
	.  error

	MachineSpec  goto 56
	LetDef  goto 17
	TypeSpec  goto 18
	MemorySpec  goto 19
	RegisterSpec  goto 20
	VarSpec  goto 21
	ModeSpec  goto 22
	OpSpec  goto 23
	ResourceSpec  goto 24
	ExceptionSpec  goto 25
	ExtendSpec  goto 26
	CanonSpec  goto 27
	ExtendHeader  goto 28


state 16
	specs : MachineSpec .  (3)

	.  reduce 3


state 17
	MachineSpec : LetDef .  (5)

	.  reduce 5


state 18
	MachineSpec : TypeSpec .  (6)

	.  reduce 6


state 19
	MachineSpec : MemorySpec .  (7)

	.  reduce 7


state 20
	MachineSpec : RegisterSpec .  (8)

	.  reduce 8


state 21
	MachineSpec : VarSpec .  (9)

	.  reduce 9


state 22
	MachineSpec : ModeSpec .  (10)

	.  reduce 10


state 23
	MachineSpec : OpSpec .  (11)

	.  reduce 11


state 24
	MachineSpec : ResourceSpec .  (12)

	.  reduce 12


state 25
	MachineSpec : ExceptionSpec .  (13)

	.  reduce 13


state 26
	MachineSpec : ExtendSpec .  (14)

	.  reduce 14


state 27
	MachineSpec : CanonSpec .  (15)

	.  reduce 15


state 28
	ExtendSpec : ExtendHeader . AttrDefList  (79)
	AttrDefList : .  (91)

	ID  shift 57
	ACTION  shift 58
	IMAGE  shift 59
	SYNTAX  shift 60
	USES  shift 61
	CANON  reduce 91
	EXTEND  reduce 91
	LET  reduce 91
	MEM  reduce 91
	MODE  reduce 91
	OP  reduce 91
	REG  reduce 91
	TYPE  reduce 91
	VAR  reduce 91
	RESOURCE  reduce 91
	EXCEPTION  reduce 91
	EOF  reduce 91

	AttrDefList  goto 62
	NOAttrDefList  goto 63
	AttrDef  goto 64


state 29
	Type : ID .  (56)

	.  reduce 56


state 30
	CanonSpec : CANON STRING_CONST . LPAREN CanonParamList RPAREN  (23)
	CanonSpec : CANON STRING_CONST . LPAREN RPAREN  (25)

	LPAREN  shift 65
	.  error


state 31
	TypeExpr : BOOL .  (36)

	.  reduce 36


state 32
	TypeExpr : CARD . LPAREN LetExpr RPAREN  (38)

	LPAREN  shift 66
	.  error


state 33
	TypeExpr : ENUM . LPAREN ValueList RPAREN  (42)

	LPAREN  shift 67
	.  error


state 34
	TypeExpr : FIX . LPAREN LetExpr COMMA LetExpr RPAREN  (39)

	LPAREN  shift 68
	.  error


state 35
	TypeExpr : FLOAT . LPAREN LetExpr COMMA LetExpr RPAREN  (40)

	LPAREN  shift 69
	.  error


state 36
	TypeExpr : INT . LPAREN LetExpr RPAREN  (37)

	LPAREN  shift 70
	.  error


state 37
	TypeExpr : LBRACK . LetExpr DOUBLE_DOT LetExpr RBRACK  (41)

	ID  shift 71
	BIN_CONST  shift 72
	BIN_CONST_64  shift 73
	CARD_CONST  shift 74
	CARD_CONST_64  shift 75
	FIXED_CONST  shift 76
	STRING_CONST  shift 77
	COERCE  shift 78
	FORMAT  shift 79
	IF  shift 80
	SWITCH  shift 81
	EXCLAM  shift 82
	PLUS  shift 83
	MINUS  shift 84
	TILD  shift 85
	LPAREN  shift 86
	.  error

	LetExpr  goto 87
	Expr  goto 88
	Constant  goto 89


state 38
	CanonSpec : CANON Type . STRING_CONST LPAREN CanonParamList RPAREN  (24)
	CanonSpec : CANON Type . STRING_CONST LPAREN RPAREN  (26)
	CanonSpec : CANON Type . STRING_CONST  (27)

	STRING_CONST  shift 90
	.  error


state 39
	Type : TypeExpr .  (55)

	.  reduce 55


state 40
	ExtendIDList : ID .  (81)

	.  reduce 81


state 41
	ExtendHeader : EXTEND ExtendIDList .  (80)
	ExtendIDList : ExtendIDList . COMMA ID  (82)

	COMMA  shift 91
	ID  reduce 80
	ACTION  reduce 80
	CANON  reduce 80
	EXTEND  reduce 80
	IMAGE  reduce 80
	LET  reduce 80
	MEM  reduce 80
	MODE  reduce 80
	OP  reduce 80
	REG  reduce 80
	SYNTAX  reduce 80
	TYPE  reduce 80
	VAR  reduce 80
	RESOURCE  reduce 80
	USES  reduce 80
	EXCEPTION  reduce 80
	EOF  reduce 80


state 42
	LocatedID : ID .  (2)

	.  reduce 2


state 43
	LetDef : LET LocatedID . EQ LetExpr  (16)
	LetDef : LET LocatedID . COLON Type EQ LetExpr  (17)

	EQ  shift 92
	COLON  shift 93
	.  error


state 44
	MemorySpec : MEM LocatedID . LBRACK MemPart RBRACK OptionalMemAttrDefList  (48)

	LBRACK  shift 94
	.  error


state 45
	ModeSpec : MODE LocatedID . LPAREN ParamList RPAREN OptionalModeExpr AttrDefList  (72)
	ModeSpec : MODE LocatedID . EQ Identifier_Or_List  (73)

	EQ  shift 95
	LPAREN  shift 96
	.  error


state 46
	OpSpec : OP LocatedID . LPAREN ParamList RPAREN AttrDefList  (76)
	OpSpec : OP LocatedID . EQ Identifier_Or_List  (77)
	OpSpec : OP LocatedID . error  (78)

	error  shift 97
	EQ  shift 98
	LPAREN  shift 99
	.  error


state 47
	RegisterSpec : REG LocatedID . LBRACK RegPart RBRACK OptionalMemAttrDefList  (49)

	LBRACK  shift 100
	.  error


state 48
	TypeSpec : TYPE LocatedID . EQ TypeExpr  (35)

	EQ  shift 101
	.  error


state 49
	VarSpec : VAR LocatedID . LBRACK RegPart RBRACK OptionalMemAttrDefList  (50)

	LBRACK  shift 102
	.  error


state 50
	Resource : LocatedID .  (21)
	Resource : LocatedID . LBRACK CARD_CONST RBRACK  (22)

	LBRACK  shift 103
	CANON  reduce 21
	EXTEND  reduce 21
	LET  reduce 21
	MEM  reduce 21
	MODE  reduce 21
	OP  reduce 21
	REG  reduce 21
	TYPE  reduce 21
	VAR  reduce 21
	RESOURCE  reduce 21
	EXCEPTION  reduce 21
	EOF  reduce 21
	COMMA  reduce 21


state 51
	ResourceSpec : RESOURCE ResourceList .  (18)
	ResourceList : ResourceList . COMMA Resource  (20)

	COMMA  shift 104
	CANON  reduce 18
	EXTEND  reduce 18
	LET  reduce 18
	MEM  reduce 18
	MODE  reduce 18
	OP  reduce 18
	REG  reduce 18
	TYPE  reduce 18
	VAR  reduce 18
	RESOURCE  reduce 18
	EXCEPTION  reduce 18
	EOF  reduce 18


state 52
	ResourceList : Resource .  (19)

	.  reduce 19


state 53
	IdentifierList : LocatedID .  (33)

	.  reduce 33


state 54
	ExceptionSpec : EXCEPTION IdentifierList .  (32)
	IdentifierList : IdentifierList . COMMA LocatedID  (34)

	COMMA  shift 105
	CANON  reduce 32
	EXTEND  reduce 32
	LET  reduce 32
	MEM  reduce 32
	MODE  reduce 32
	OP  reduce 32
	REG  reduce 32
	TYPE  reduce 32
	VAR  reduce 32
	RESOURCE  reduce 32
	EXCEPTION  reduce 32
	EOF  reduce 32


state 55
	top : specs EOF .  (1)

	.  reduce 1


state 56
	specs : specs MachineSpec .  (4)

	.  reduce 4


state 57
	AttrDef : ID . EQ Expr  (95)
	AttrDef : ID . EQ LBRACE Sequence RBRACE  (96)
	AttrDef : ID . EQ error  (101)
	AttrDef : ID . error  (102)

	error  shift 106
	EQ  shift 107
	.  error


state 58
	AttrDef : ACTION . EQ LBRACE Sequence RBRACE  (99)

	EQ  shift 108
	.  error


state 59
	AttrDef : IMAGE . EQ AttrExpr  (98)

	EQ  shift 109
	.  error


state 60
	AttrDef : SYNTAX . EQ AttrExpr  (97)

	EQ  shift 110
	.  error


state 61
	AttrDef : USES . EQ UsesDef  (100)

	EQ  shift 111
	.  error


state 62
	ExtendSpec : ExtendHeader AttrDefList .  (79)

	.  reduce 79


state 63
	AttrDefList : NOAttrDefList .  (92)
	NOAttrDefList : NOAttrDefList . AttrDef  (94)

	ID  shift 57
	ACTION  shift 58
	IMAGE  shift 59
	SYNTAX  shift 60
	USES  shift 61
	CANON  reduce 92
	EXTEND  reduce 92
	LET  reduce 92
	MEM  reduce 92
	MODE  reduce 92
	OP  reduce 92
	REG  reduce 92
	TYPE  reduce 92
	VAR  reduce 92
	RESOURCE  reduce 92
	EXCEPTION  reduce 92
	EOF  reduce 92

	AttrDef  goto 112


state 64
	NOAttrDefList : AttrDef .  (93)

	.  reduce 93


state 65
	CanonSpec : CANON STRING_CONST LPAREN . CanonParamList RPAREN  (23)
	CanonSpec : CANON STRING_CONST LPAREN . RPAREN  (25)

	ID  shift 113
	BOOL  shift 31
	CARD  shift 32
	ENUM  shift 33
	FIX  shift 34
	FLOAT  shift 35
	INT  shift 36
	LBRACK  shift 37
	RPAREN  shift 114
	.  error

	LocatedID  goto 115
	Type  goto 116
	CanonParamList  goto 117
	CanonParam  goto 118
	TypeExpr  goto 39


state 66
	TypeExpr : CARD LPAREN . LetExpr RPAREN  (38)

	ID  shift 71
	BIN_CONST  shift 72
	BIN_CONST_64  shift 73
	CARD_CONST  shift 74
	CARD_CONST_64  shift 75
	FIXED_CONST  shift 76
	STRING_CONST  shift 77
	COERCE  shift 78
	FORMAT  shift 79
	IF  shift 80
	SWITCH  shift 81
	EXCLAM  shift 82
	PLUS  shift 83
	MINUS  shift 84
	TILD  shift 85
	LPAREN  shift 86
	.  error

	LetExpr  goto 119
	Expr  goto 88
	Constant  goto 89


state 67
	TypeExpr : ENUM LPAREN . ValueList RPAREN  (42)

	ID  shift 71
	BIN_CONST  shift 72
	BIN_CONST_64  shift 73
	CARD_CONST  shift 74
	CARD_CONST_64  shift 75
	FIXED_CONST  shift 76
	STRING_CONST  shift 77
	COERCE  shift 78
	FORMAT  shift 79
	IF  shift 80
	SWITCH  shift 81
	EXCLAM  shift 82
	PLUS  shift 83
	MINUS  shift 84
	TILD  shift 85
	LPAREN  shift 86
	.  error

	LetExpr  goto 120
	ValueList  goto 121
	Value  goto 122
	Expr  goto 88
	Constant  goto 89


state 68
	TypeExpr : FIX LPAREN . LetExpr COMMA LetExpr RPAREN  (39)

	ID  shift 71
	BIN_CONST  shift 72
	BIN_CONST_64  shift 73
	CARD_CONST  shift 74
	CARD_CONST_64  shift 75
	FIXED_CONST  shift 76
	STRING_CONST  shift 77
	COERCE  shift 78
	FORMAT  shift 79
	IF  shift 80
	SWITCH  shift 81
	EXCLAM  shift 82
	PLUS  shift 83
	MINUS  shift 84
	TILD  shift 85
	LPAREN  shift 86
	.  error

	LetExpr  goto 123
	Expr  goto 88
	Constant  goto 89


state 69
	TypeExpr : FLOAT LPAREN . LetExpr COMMA LetExpr RPAREN  (40)

	ID  shift 71
	BIN_CONST  shift 72
	BIN_CONST_64  shift 73
	CARD_CONST  shift 74
	CARD_CONST_64  shift 75
	FIXED_CONST  shift 76
	STRING_CONST  shift 77
	COERCE  shift 78
	FORMAT  shift 79
	IF  shift 80
	SWITCH  shift 81
	EXCLAM  shift 82
	PLUS  shift 83
	MINUS  shift 84
	TILD  shift 85
	LPAREN  shift 86
	.  error

	LetExpr  goto 124
	Expr  goto 88
	Constant  goto 89


state 70
	TypeExpr : INT LPAREN . LetExpr RPAREN  (37)

	ID  shift 71
	BIN_CONST  shift 72
	BIN_CONST_64  shift 73
	CARD_CONST  shift 74
	CARD_CONST_64  shift 75
	FIXED_CONST  shift 76
	STRING_CONST  shift 77
	COERCE  shift 78
	FORMAT  shift 79
	IF  shift 80
	SWITCH  shift 81
	EXCLAM  shift 82
	PLUS  shift 83
	MINUS  shift 84
	TILD  shift 85
	LPAREN  shift 86
	.  error

	LetExpr  goto 125
	Expr  goto 88
	Constant  goto 89


state 71
	Expr : ID . DOT SYNTAX  (152)
	Expr : ID . DOT IMAGE  (153)
	Expr : ID . DOT ID  (154)
	Expr : ID .  (156)
	Expr : ID . LPAREN  (157)
	Expr : ID . LBRACK Expr RBRACK  (158)
	Expr : ID . LBRACK error  (159)

	LBRACK  shift 126
	LPAREN  shift 127
	DOT  shift 128
	error  reduce 156
	ID  reduce 156
	ACTION  reduce 156
	ALIAS  reduce 156
	CANON  reduce 156
	CASE  reduce 156
	DEFAULT  reduce 156
	DO  reduce 156
	ELSE  reduce 156
	ENDIF  reduce 156
	EXTEND  reduce 156
	IMAGE  reduce 156
	INITIALA  reduce 156
	LET  reduce 156
	MEM  reduce 156
	MODE  reduce 156
	OP  reduce 156
	REG  reduce 156
	SYNTAX  reduce 156
	THEN  reduce 156
	TYPE  reduce 156
	VAR  reduce 156
	VOLATILE  reduce 156
	PORTS  reduce 156
	RESOURCE  reduce 156
	USES  reduce 156
	EXCEPTION  reduce 156
	EOF  reduce 156
	OR  reduce 156
	AND  reduce 156
	LEQ  reduce 156
	GEQ  reduce 156
	EQU  reduce 156
	NEQ  reduce 156
	LEFT_SHIFT  reduce 156
	RIGHT_SHIFT  reduce 156
	DOUBLE_STAR  reduce 156
	ROTATE_RIGHT  reduce 156
	ROTATE_LEFT  reduce 156
	DOUBLE_COLON  reduce 156
	DOUBLE_DOT  reduce 156
	BIT_LEFT  reduce 156
	PIPE  reduce 156
	CIRC  reduce 156
	AMPERS  reduce 156
	GT  reduce 156
	LT  reduce 156
	PLUS  reduce 156
	MINUS  reduce 156
	STAR  reduce 156
	SLASH  reduce 156
	PERCENT  reduce 156
	COLON  reduce 156
	COMMA  reduce 156
	RBRACE  reduce 156
	RBRACK  reduce 156
	RPAREN  reduce 156
	SEMI  reduce 156


state 72
	Constant : BIN_CONST .  (197)

	.  reduce 197


state 73
	Constant : BIN_CONST_64 .  (198)

	.  reduce 198


state 74
	Constant : CARD_CONST .  (195)

	.  reduce 195


state 75
	Constant : CARD_CONST_64 .  (196)

	.  reduce 196


state 76
	Constant : FIXED_CONST .  (194)

	.  reduce 194


state 77
	Expr : STRING_CONST . LPAREN ArgList RPAREN  (151)
	Constant : STRING_CONST .  (199)
